hphp/hack/test/typecheck/constraints/contravariance_constraint_bad_2.php.like_types.exp
File "contravariance_constraint_bad_2.php", line 20, characters 10-13:
Invalid argument (Typing[4110])
File "contravariance_constraint_bad_2.php", line 14, characters 12-12:
Expected T
File "contravariance_constraint_bad_2.php", line 16, characters 49-49:
  via this generic T
File "contravariance_constraint_bad_2.php", line 18, characters 28-28:
But got <expr#1> because it is an unenforceable type
File "contravariance_constraint_bad_2.php", line 43, characters 12-13:
Invalid return type (Typing[4110])
File "contravariance_constraint_bad_2.php", line 37, characters 26-34:
Expected ~NAC\CONTRA<T> because it is an unenforceable type
File "contravariance_constraint_bad_2.php", line 38, characters 14-16:
But got NAC\CCC<NAC\AAA>
